src/sass/modules/_steps.scss
.step-screen {
    padding-right: 100px;
    max-width: 550px;
    width: 35%;
    position: absolute;
    top: 50%;
    backface-visibility: hidden;
    transform: translate3d(0, -50%, 0);

    h2 + p {
        max-width: 320px;
    }
    > div {
        position: relative !important;
    }

    @include media($screen-sm) {
        max-width: 100%;
        padding: 0;
        width: 100%;
    }
}

.step-image {
    width: 520px;
    position: absolute;
    left: 50%;
    text-align: left;
    margin-left: 0;
    transform: translate3d(0,0,0);

    img {
        max-width: 415px;

        @include media($screen-md) {
            max-width: 100%;
        }
    }

    @include media($screen-sm) {
        @include opacity(1, true);
        width: 100%;
        text-align: center;
    }
    &.fixed {
        top: 50% !important;
        transform: translate3d(0,-50%,0);
    }

}

.steps-container {
    h2 {
        @include font-size(32px);
    }

    p {
        @include font-size(16px);
    }
    &.visible-steps {
        .step-image.is-fixed {
            position: static;
        }
    }

    @include media($screen-md) {
        display: none;
    }

    .progress-bullets {
        position: fixed;
        top: calc(50% - 48px);
        right: 103px;
        backface-visibility: hidden;
        @include transform(translateZ(0));
        @include opacity(0);

        &.loaded {
            @include opacity(1);
        }
        .circle {
            width: 8px;
            height: 8px;
            background-color: #B6B4B9; // #424242
            border-radius: 50%;
            margin: 10px 0;
            @include transition(.2s);
        }
        @media(max-width: 1260px) {
            display: none;
        }
    }
}

.steps-container-mobile {
    display: block;
    padding-bottom: 40px;
    z-index: 19;

    .steps-mobile-image {
        position: relative;
        margin-bottom: 70px;

        &:last-child {
            margin: 0;
        }
    }

    h2 {
        margin-bottom: 20px;
        @include font-size(24px);
    }

    p {
        margin-bottom: 40px;
    }

    @include media-min($screen-md) {
        display: none;
    }
}

.steps-circles {
    a {
        display: inline-block;
        width: 50px;
        height: 50px;
        line-height: 50px;
        border-radius: 50%;
        text-align: center;
        border: 1px solid #fff;
        color: #fff;
        text-decoration: none;
        margin-right: 5px;

        &:hover {
            background: rgba(#fff, .3);
        }

        &.current {
            color: #333;
            background: #fff;
        }
    }
}

.v-middle-image {
    position: absolute;
    top: 50%;
    @include transform(translateZ(0));
    @include transform(translateY(-50%));
}

